<resources>
    <string name="app_name">FuelLog</string>
    <string name="action_settings">Trocar Usuário</string>
    <!-- Strings used for fragments for navigation -->
    <string name="username">Gabriel</string>
    <string name="registrar_abastecimento">Registrar Abastecimento</string>
    <string name="proximo_abastecimento">Prox. Abastecimento</string>
    <string name="proximo_abastecimento_completo">Próximo Abastecimento</string>
    <string name="consumo_atual">Consumo Atual</string>
    <string name="historico">Histórico</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>