<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Menu">

    <fragment
        android:id="@+id/Menu"
        android:name="com.example.fuellog.Fragments.FirstFragment"
        android:label="@string/username"
        tools:layout="@layout/fragment_menu">

        <action
            android:id="@+id/action_Menu_to_RegistrarAbastecimento"
            app:destination="@id/RegistrarAbastecimento" />
        <action
            android:id="@+id/action_Menu_to_ConsumoAtual"
            app:destination="@id/ConsumoAtual" />
        <action
            android:id="@+id/action_Menu_to_ProxAbastecimento"
            app:destination="@id/ProxAbastecimento" />
        <action
            android:id="@+id/action_Menu_to_Historico"
            app:destination="@id/Historico" />
    </fragment>
    <fragment
        android:id="@+id/RegistrarAbastecimento"
        android:name="com.example.fuellog.Fragments.RegistrarAbastecimento"
        android:label="@string/registrar_abastecimento"
        tools:layout="@layout/fragment_abastecimento">

        <action
            android:id="@+id/action_RegistrarAbastecimento_to_Menu"
            app:destination="@id/Menu" />
    </fragment>
    <fragment
        android:id="@+id/ConsumoAtual"
        android:name="com.example.fuellog.Fragments.ConsumoAtual"
        android:label="@string/consumo_atual"
        tools:layout="@layout/fragment_consumo_atual">

        <action
            android:id="@+id/action_ConsumoAtual_to_Menu"
            app:destination="@id/Menu" />
    </fragment>
    <fragment
        android:id="@+id/ProxAbastecimento"
        android:name="com.example.fuellog.Fragments.ProxAbastecimento"
        android:label="@string/proximo_abastecimento"
        tools:layout="@layout/fragment_prox_abastecimento">

        <action
            android:id="@+id/action_ProxAbastecimento_to_Menu"
            app:destination="@id/Menu" />
    </fragment>
    <fragment
        android:id="@+id/Historico"
        android:name="com.example.fuellog.Fragments.Historico"
        android:label="@string/historico"
        tools:layout="@layout/fragment_abastecimento">

        <action
            android:id="@+id/action_Historico_to_Menu"
            app:destination="@id/Menu" />
    </fragment>
</navigation>